package org.elasterix.elasticactors.serialization.protobuf;

option optimize_for = SPEED;

// WARNING:
//    you must not change the tag numbers of any existing fields.
//    you must not add or delete any required fields.
//    you may delete optional or repeated fields.
//    you may add new optional or repeated fields but you must use fresh tag numbers (i.e. tag numbers that were never
//        used in this protocol buffer, not even by deleted fields).

message InternalMessage {
    optional string receiver = 1;
    optional string sender = 2;
    optional string payloadClass = 3;
    optional bytes payload = 4;
    optional bytes id = 5;
}

message PersistentActor {
    optional string actorRef = 1;
    optional string actorClass = 2;
    optional string actorSystemVersion = 3;
    optional bytes state = 4;
    optional string shardKey = 5;
}

message CreateActorMessage {
    optional string actorId = 1;
    optional bytes initialState = 2;
    optional string actorClass = 3;
    optional string actorSystem = 4;
}

message WireMessage {
    optional string queueName = 1;
    optional bytes internalMessage = 2;
}